--- a/css/index.css
+++ b/css/index.css
@@ -9,20 +9,31 @@
 * {
   margin: 0;
   padding: 0;
-  box-sizing: border-box;
   outline-style: none;
+  box-sizing: border-box;
 }
+
+a {
+  color: #111;
+  text-decoration: none;
+}
+ul {
+  list-style: none;
+}
+img {
+  border: 0;
+  vertical-align: middle;
+}
+
 html {
   font-size: 10px;
 }
 body {
-  font-size: 1.3rem;
   font-family: "Pretendard", sans-serif;
+  font-size: 1.3rem;
   font-weight: 400;
   line-height: 1;
-  letter-spacing: -0.64;
-
-  color: #000;
-
+  color: #000000;
+  letter-spacing: -0.64px;
   word-break: keep-all;
 }
