--- a/css/live.css
+++ b/css/live.css
@@ -39,32 +39,111 @@
   position: relative;
 }
 .live-slide-item {
-  height: 456px;
   position: relative;
+  height: 456px;
 }
 .live-slide-link {
-  display: block;
+  position: relative;
   width: 100%;
   height: 100%;
+  background-color: #fff;
 }
 .live-slide-item-info {
-  position: relative;
+  position: absolute;
+  top: 0;
+  left: 0;
+
+  width: 100%;
+  background-color: pink;
 }
 .live-img {
-  height: 456px;
-  width: auto;
   position: relative;
+  width: auto;
+  height: 456px;
+}
+.live-img::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  display: block;
+  background: linear-gradient(
+      180deg,
+      rgba(0, 0, 0, 0.4) 18.65%,
+      transparent 39.78%
+    ),
+    linear-gradient(180deg, transparent 56.75%, rgba(0, 0, 0, 0.5) 87.59%);
 }
 .live-img img {
   position: relative;
-  height: 100%;
   width: 100%;
+  height: 100%;
   object-fit: cover;
 }
+.live-info {
+  position: absolute;
+
+  top: 20px;
+  left: 0;
+  width: auto;
+  padding: 0 22px;
+}
+.live-info-title {
+  position: relative;
+
+  height: 3.2rem;
+  display: inline-block;
+
+  margin-bottom: 0.8rem;
+  padding: 0 1.2rem;
+  background: rgba(0, 0, 0, 0.5);
+
+  font-size: 1.3rem;
+  font-weight: 700;
+  line-height: 3.2rem;
+  color: #fff;
+  border-radius: 1.6rem;
+}
+.live-info-desc {
+  position: relative;
+  display: block;
+
+  font-size: 2rem;
+  font-weight: 700;
+  color: #fff;
+  text-shadow: 0 0 0.2rem rgba(0, 0, 0, 0.5);
+}
+.live-desc {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+/* .live-desc-wrap {
+  position: relative;
+} */
+.live-desc-date {
+  position: relative;
+  font-size: 2.8rem;
+  color: #fff;
+}
+.live-desc-time {
+  position: relative;
+  font-size: 5rem;
+  color: #fff;
+}
+
 .live-slide-good-link {
   position: absolute;
-  left: 0;
   bottom: 0;
+  left: 0;
 
   width: 100%;
 
@@ -79,30 +158,36 @@
 }
 .live-good-img {
   position: relative;
-  width: 6.4rem;
-  height: 6.4rem;
+  width: 100%;
+  height: 100%;
 
   /* margin-right: 25px; */
   /* border-radius 적용시 안되고, 
   overflow: hidden 적용하면 radius가 되는이유? */
-  overflow: hidden;
-  border-radius: 0.6rem;
 }
 .live-good-img img {
   position: relative;
-
-  height: 100%;
-  width: 100%;
+  width: 6.4rem;
+  height: 6.4rem;
+  display: block;
+  overflow: hidden;
+  border-radius: 0.6rem;
   object-fit: cover;
 }
+.img-blank {
+  display: none;
+}
+
 .live-good-info {
   position: relative;
+  white-space: nowrap;
 }
 .live-good-info-title {
   position: relative;
+  padding-bottom: 10px;
   font-size: 1.5rem;
   color: #fff;
-  padding-bottom: 10px;
+  text-shadow: 0 0 0.2rem rgba(0, 0, 0, 0.5);
 }
 .live-good-info-desc {
   position: relative;
@@ -110,6 +195,6 @@
   color: #fff;
 }
 .live-good-info-discount {
-  color: red;
   font-weight: 700;
+  color: red;
 }
